# luna

./: .gitignore  .gitmodules  CMakeLists.txt  Luna.sln  README.md  toolchain.rpi.arm.cmake
extlibs/: CMakeLists.txt  FindLibrarisForPlatform.cmake
extlibs/libnyquist/: CMakeLists.txt
extlibs/libnyquist/msvs/back/: ReadMe.txt  libnyquist.vcxproj  libnyquist.vcxproj.filters
extlibs/libnyquist/msvs/v140/: libnyquist.vcxproj
extlibs/libnyquist/src/: Common.cpp  FlacDecoder.cpp  MusepackDependencies.c  WavDecoder.cpp  WavEncoder.cpp
extlibs/libnyquist/test/: Main.cpp
extlibs/libsoundio/: CMakeLists.txt
extlibs/rtaudio/: CMakeLists.txt  RtAudio.cpp
extlibs/rtaudio/include/: asiosys.h  ginclude.h
extlibs/rtaudio/msvs/: ReadMe.txt  rtaudio.vcxproj  rtaudio.vcxproj.filters
extlibs/rtaudio/tests/: CMakeLists.txt
src/CloudIoTLibrary/ccGCPIoTDevice/: CMakeLists.txt
src/CloudIoTLibrary/ccGCPIoTDevice/include/ccGCPIoTDevice/: ccGCPIoTDevice.h
src/CloudIoTLibrary/ccGCPIoTDevice/src/: ccGCPIoTDevice.cpp
src/FossLibrary/ccRestClient/: CMakeLists.txt
src/FossLibrary/ccRestClient/msvs/: ccRestClient.VS2017.vcxproj  ccRestClient.vcxproj  ccRestClient.vcxproj.filters
src/FossLibrary/ccRestClient/src/: connection.cc  restclient.cc
src/FossLibrary/ccWebsocketClient/: CMakeLists.txt  ccEasyWebsocketClient.h
src/FossLibrary/ccWebsocketClient/msvc/: ccWebsocketClient.VS2017.vcxproj  ccWebsocketClient.VS2017.vcxproj.filters  ccWebsocketClient.vcxproj  ccWebsocketClient.vcxproj.filters
src/FossLibrary/ccWebsocketClient/src/: ccEasyWebsocketClient.cpp
src/FossLibrary/poco/: CMakeLists.txt
src/FossLibrary/poco/Foundation/: Foundation_x64_vs150.vcxproj
src/FossLibrary/poco/Net/: Net_x64_vs150.vcxproj  Net_x64_vs150.vcxproj.filters
src/IoTLibrary/ccIoTDevice/: CMakeLists.txt
src/IoTLibrary/ccIoTDevice/msvc/: ccIoTDeviceAPI.VS2017.vcxproj  ccIoTDeviceAPI.VS2017.vcxproj.filters  ccIoTDeviceAPI.vcxproj  ccIoTDeviceAPI.vcxproj.filters
src/IoTLibrary/ccIoTDevice/src/: ccIoTDevice.cpp  ccIoTDeviceAgent.cpp  ccIoTDeviceInfo.cpp  ccIoTDeviceManager.cpp  ccIoTDeviceProtocol.cpp  ccIoTDeviceSpecification.cpp  ccIoTDeviceSpecificationList.cpp  ccIoTDeviceTransport.cpp  ccIoTDeviceTransportFactory.cpp  ccIotDeviceSyncProtocol.cpp
src/TestAPPs/WebServerTest/: CMakeLists.txt
src/TestAPPs/WebServerTest/msvc/: WebServerTest.VS2017.vcxproj  WebServerTest.vcxproj  WebServerTest.vcxproj.filters
src/TestAPPs/WebServerTest/src/: RESTfulChattingApiManager.cpp  main.cpp
src/ThirdPartyLibrary/ccMongooseServer/: CMakeLists.txt  ccMongooseWebServerObjectFactory.h
src/ThirdPartyLibrary/ccMongooseServer/msvc/: ccMongooseServer.VS2017.vcxproj  ccMongooseServer.VS2017.vcxproj.filters  ccMongooseServer.vcxproj  ccMongooseServer.vcxproj.filters
src/ThirdPartyLibrary/ccMongooseServer/src/: ccMongooseWebServer.cpp  ccMongooseWebServer.h  ccMongooseWebServerObjectFactory.cpp  ccMongooseWebServerRequest.cpp  ccMongooseWebServerRequest.h  ccMongooseWebServerResponse.cpp  ccMongooseWebServerResponse.h  ccMongooseWebsocket.cpp  ccMongooseWebsocket.h
src/ThirdPartyLibrary/ccMongooseWebServer/: CMakeLists.txt
src/ThirdPartyLibrary/ccMongooseWebServer/msvc/: ccMongooseServer.vcxproj  ccMongooseServer.vcxproj.filters
src/ThirdPartyLibrary/ccMongooseWebServer/src/: ccMongooseWebServer.cpp  ccMongooseWebServer.h  ccMongooseWebServerObjectFactory.cpp  ccMongooseWebServerRequest.cpp  ccMongooseWebServerResponse.cpp  ccMongooseWebServerResponse.h  ccMongooseWebsocket.cpp  ccMongooseWebsocket.h
src/ThirdPartyLibrary/ccPocoWebServer/: CMakeLists.txt
src/ThirdPartyLibrary/ccPocoWebServer/msvc/: ccPocoWebServer.vcxproj  ccPocoWebServer.vcxproj.filters
src/ThirdPartyLibrary/ccPocoWebServer/src/: ccPocoWebServer.cpp  ccPocoWebServer.h  ccPocoWebServerObjectFactory.cpp  ccPocoWebServerRequest.cpp  ccPocoWebServerRequest.h  ccPocoWebServerResponse.cpp  ccPocoWebServerResponse.h  ccPocoWebsocket.cpp  ccPocoWebsocket.h
test/GCPIoT/GCPIoTDeviceTest/: CMakeLists.txt
test/GCPIoT/GCPIoTDeviceTest/cert/: sf-iot-id-0001_rsa_cert.pem  sf-iot-id-0001_rsa_private.pem  sf-iot-id-0001_rsa_public.pem
test/GCPIoT/GCPIoTDeviceTest/config/: sf-iot.json
test/GCPIoT/GCPIoTDeviceTest/src/: ccGCPIoTDevice.cpp  ccGCPIoTDevice.h  ccJWTManager.cpp  ccJWTManager.h  main.cpp
test/IoTDeviceTestApp/IoTDeviceTest/: CMakeLists.txt
test/IoTDeviceTestApp/IoTDeviceTest/msvc/: IoTDeviceTest.VS2017.vcxproj  IoTDeviceTest.vcxproj  LightDeviceInfo.json  MyDeviceInfo.json  SwitchDeviceInfo.json
test/IoTDeviceTestApp/IoTDeviceTest/src/: main.cpp
test/RaspberryPiTestApp/Pi2IoTServiceManagerBasedPositionSensor/: CMakeLists.txt
test/RaspberryPiTestApp/Pi2IoTServiceManagerBasedPositionSensor/msvc/: Pi2IoTServiceManagerBasedPositionSensor.vcxproj
test/RaspberryPiTestApp/Pi2IoTServiceManagerBasedPositionSensor/src/: Pi2IoTPositionServiceManager.h  main.cpp
test/WatsonConversationTest/: CMakeLists.txt  env.example.json  log.txt
test/WatsonConversationTest/msvc/: WatsonConversationTest.vcxproj  WatsonConversationTest.vcxproj.filters
test/WatsonConversationTest/src/: ConversationClient.cpp  ConversationClient.h  EnvironmentInfo.cpp  STTClient.h  TTSClient.h  main.cpp
test/WatsonPoCTest/: CMakeLists.txt  env.example.json
test/WatsonPoCTest/msvc/: WatsonPoCTest.vcxproj  WatsonPoCTest.vcxproj.filters
test/WatsonPoCTest/src/: ConversationClient.cpp  ConversationClient.h  ConversationClientWithController.cpp  ConversationClientWithController.h  EnvironmentInfo.cpp  EnvironmentInfo.h  LogManager.cpp  LogManager.h  STTClient.cpp  STTClient.h  TTSClient.cpp  TTSClient.h  main.cpp
test/WatsonPoCTest/src/AudioManager/: AudioDevice.cpp  AudioDevice.h  AudioManager.cpp  AudioManager.h  LunaAudioDevice.h  RingBuffer.h
test/WebServerTest/: CMakeLists.txt
test/WebServerTest/msvc/: WebServerTest.VS2017.vcxproj  WebServerTest.VS2017.vcxproj.filters  WebServerTest.vcxproj
test/WebServerTest/src/: ChattingWSManager.cpp  ChattingWSManager.h  RESTfulChattingApiManager.cpp  RESTfulChattingApiManager.h  main.cpp
(+259 files in other folders)
