#
CMAKE_MINIMUM_REQUIRED (VERSION 3.5.1)

#
PROJECT(AudioLibraries)

# Configuration
#
# set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR}/cmake_package ${CMAKE_MODULE_PATH})

# Set Build Directories
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

#
# Make Libraries
#
ADD_SUBDIRECTORY(libnyquist)
ADD_SUBDIRECTORY(rtaudio)